[build-system]
requires = ["cython>=3.0.2","setuptools>=68.2.2","numpy>=1.24.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ldpc"

description = "LDPC: Python Tools for Low Density Parity Check Codes"
readme = "README.md"
authors = [
    { name = "Joschka Roffe", email = "joschka@roffe.eu" }
]
license = { file = "LICENSE" }

classifiers = [
    "Development Status :: 4 - Beta",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.9.3",
    "tqdm",
    "pytest",
    "stim",
    "sinter",
    "BeliefMatching"
]
version = "2.0.18"

[tool.setuptools.packages.find]
where = ["src_python"]  
include = ["ldpc","ldpc.*"]

