[build-system]
requires = ["cython>=3.0.2","setuptools>=68.2.2","numpy>=1.24.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ldpc"

description = "LDPC: Python Tools for Low Density Parity Check Codes"
readme = "README.md"
authors = [
    { name = "Joschka Roffe", email = "joschka@roffe.eu" }
]
license = { file = "LICENSE" }

classifiers = [
    "Development Status :: 4 - Beta",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.9.3",
    "tqdm",
    "pytest",
    "stim",
    "sinter",
    "pymatching"
]
version = "2.2.7"

[project.urls]
Documentation = "https://software.roffe.eu/ldpc"

[tool.setuptools.packages.find]
where = ["src_python"]  
include = ["ldpc","ldpc.*"]
